traefik/03-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: traefik
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
      annotations:
        prometheus.io/port: '8080'
        prometheus.io/path: '/metrics'
    spec:
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik
          args:
            - --entrypoints.web.Address=:80
            - --entrypoints.websecure.Address=:443
            - --entrypoints.websecure.http.tls=true
            - --providers.kubernetescrd
            - --providers.kubernetesingress.ingressclass=traefik-lb
            - --api.dashboard
            - --metrics.prometheus
            - --log.level=debug
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
