traefik/05-ingress-dashboard.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/api`) || PathPrefix(`/dashboard`)
      services:
        - name: api@internal
          kind: TraefikService
